--- a/Practice1_5.html
+++ b/Practice1_5.html
@@ -9,6 +9,7 @@
    <h2><center>INTRODUCING ABC BOOK TRADING AND SERVICES JOINT STOCK COMPANY</center></h2>
     <p><b>ABC Book Trading and Services Joint Stock Company</b> is one of the first few e-commerce companies in Vietnam to start wit ha website <a href="https://abc.com/" target="_blank" rel="noopener noreferrer">www.abc.com</a> since December 2005</p>
     <img src="img/img/logoABC.png" alt="logoABC" style="width: 80%;height: 300px;">
+    <p><b><span style="color: red;">PRINCIPES OF OPERATION</span></b></p>
 
 
 </body>
