--- a/Practice1_5.html
+++ b/Practice1_5.html
@@ -10,7 +10,13 @@
     <p><b>ABC Book Trading and Services Joint Stock Company</b> is one of the first few e-commerce companies in Vietnam to start wit ha website <a href="https://abc.com/" target="_blank" rel="noopener noreferrer">www.abc.com</a> since December 2005</p>
     <img src="img/img/logoABC.png" alt="logoABC" style="width: 80%;height: 300px;">
     <p><b><span style="color: red;">PRINCIPES OF OPERATION</span></b></p>
-
-
+    <ul>
+        <li>Absolutely respect copyright and publishing laws</li>
+        <li>Committed to creating quality,valuable books that always keep up with current trends</li>
+        <li>Be reader-centered</li>
+        <li>Increase benefits for partners</li>
+        <li>Awaken and promote each individual's creative abilities</li>
+    </ul>
+    <p><b><span style="color: blue;">BUSINESS ORIENTATION</span></b></p>
 </body>
 </html>
